# akoenet-client

./: .env.example  .env.production  .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  railpack.json  railway.toml  vite.config.js
.github/workflows/: ci.yml
android/app/: build.gradle
docs/legal/: ACCOUNT_DELETION.en.md  ACCOUNT_DELETION.md  CHILD_SAFETY.en.md  CHILD_SAFETY.md  MODERACION_CONTENIDOS.en.md  MODERACION_CONTENIDOS.md  POLITICA_COOKIES.en.md  POLITICA_COOKIES.md  PRIVACIDAD.en.md  PRIVACIDAD.md  PROTECCION_LEGAL.en.md  PROTECCION_LEGAL.md  TERMINOS_Y_CONDICIONES.en.md  TERMINOS_Y_CONDICIONES.md
public/: _redirects  manifest.webmanifest  sw.js
scripts/: cap-sync-android-mobile.mjs  copy-android-aab.mjs  generate-android-icons.mjs  print-updater-pubkey-for-tauri-conf.mjs  publish-release-assets.mjs  release-desktop-to-public.mjs  run-android-gradle.mjs  serve-production.mjs  sync-app-icons.mjs  sync-mobile-version.mjs  sync-tauri-version.mjs  tauri-with-cargo-path.mjs  verify-invite-links.mjs
src/: App.jsx  i18n.js  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: AppChrome.jsx  AppChromeToolbar.jsx  AuthLegalStrip.jsx  ChannelList.jsx  ChannelPermissionsPanel.jsx  ChannelSettingsModal.jsx  Chat.jsx  CookieConsentBanner.jsx  DirectMessagesPanel.jsx  EditHistoryModal.jsx  EmojiText.jsx  GlobalSearchModal.jsx  LandingAppSection.jsx  SiteFooter.jsx  (+19 more)
(+56 files in other folders)
